# ai-operations-center

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.dev  .env.example  .env.prod  .env.test  .gitignore  README.md  alembic.ini  pyproject.toml  verify_sprint1.py
backend/alembic/: env.py
backend/alembic/versions/: 20260702_0001_create_system_items.py  20260703_0002_add_prompt_snapshot_to_ai_trace 2.py  20260708_0003_create_report_chat_tables.py  20260710_0004_link_report_chat_runtime.py  20260711_0005_seed_runtime_chat_prompt.py  20260711_0006_add_langgraph_runtime_prompt_facts.py  42248f3f3230_create_operation_analysis_record_tables.py  786c07ec8ed1_add_source_label_to_analysis_events.py  907e5e77381a_create_runtime_tables.py  f3380d72776e_create_analysis_events_table.py
backend/app/: __init__.py  main.py
backend/app/analysis_stream/: event_emitter.py  event_types.py  langgraph_event_adapter.py  schemas.py  sse_formatter.py
backend/app/api/: __init__.py  router.py
backend/app/application/: __init__.py  agent_service.py
backend/app/config/: settings.py
backend/app/core/: __init__.py
backend/app/db/: __init__.py  redis.py  session.py
backend/app/mcp_adapter/: server.py  tools.py
backend/app/models/: __init__.py  item.py
backend/app/operation_agent/: __init__.py  analysis_basis.py  api.py  graph.py  service.py  state.py  stream_service.py
backend/app/rag/: client.py  mock_client.py  (+2 more)
backend/scripts/: debug_operation_agent.py  demo_report_chat.py  seed_runtime_prompt.py  verify_tool_center.py
backend/tests/: test_api.py
(+324 files in other folders)
