[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-operations-center-backend"
version = "0.1.0"
description = "FastAPI backend for AIOperationsCenter AI Agent Runtime"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi[standard]>=0.116.0,<1.0.0",
  "langgraph>=1.2.8,<2.0.0",
  "langchain-core>=1.4.0,<2.0.0",
  "langchain>=1.3.0,<2.0.0",
  "langchain-openai>=0.3.0,<2.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "pymysql>=1.1.1,<2.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
